--- a/index.ipynb
+++ b/index.ipynb
@@ -127,31 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Argentina',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'New Mexico',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
-       " 'Italy',\n",
-       " 'Canada',\n",
-       " 'South Korea']"
+       "'Italy'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "italy = countries[2:len(countries)] # 'Italy'\n",
+    "italy = countries[len(countries)-3] # 'Italy'\n",
     "italy"
    ]
   },
